# libgwords

./: .gitignore  .gitlab-ci.yml  CONTRIBUTING.md  README.md  configure  configure.ac  libgwords.doap  libwords.doap  meson.build
contrib/: meson.build
contrib/unitex-pb/: Alphabet.c  Alphabet.h  DELA.c  DELA.h  FileName.c  FileName.h  String_hash.c  String_hash.h  lexicon-bib.c  lexicon-bib.h  meson.build  unicode.c  unicode.h
data/: Makefile.am  meson.build
data/icons/: meson.build
po/: meson.build
src/: Makefile.am  gw-dictionary-private.h  gw-dictionary.c  gw-dictionary.h  gw-document.c  gw-document.h  gw-enum-types.c.template  gw-enum-types.h.template  gw-enums.h  gw-extension-points.h  gw-group.c  gw-group.h  gw-init-dictionaries.h  gw-init-documents.h  gw-init-segmenters.h  gw-init.c  gw-init.h  gw-language.c  gw-language.h  gw-modifier.c  gw-modifier.h  gw-radix-tree.c  gw-radix-tree.h  gw-segmenter.c  gw-segmenter.h  gw-string-editor.c  gw-string-editor.h  gw-string.c  gw-string.h  gw-task-helper-private.h  gw-task-helper.c  gw-types.h  gw-utils.c  gw-utils.h  gw-version.h.in  gwords.h  meson.build  words-dictionary.c  words-dictionary.h  words-group.c  (+9 more)
src/languages/C/: gw-dictionary-fallback.c  gw-dictionary-fallback.h  gw-document-fallback.c  gw-document-fallback.h  gw-segmenter-fallback.c  gw-segmenter-fallback.h
src/languages/pt_BR/: gw-dictionary-pt-br.c  gw-dictionary-pt-br.h  gw-segmenter-pt-br.c  gw-segmenter-pt-br.h
src/string/: gw-string-comparator.c  gw-string-comparator.h  gw-string-editor.c  gw-string-editor.h  gw-string.c  gw-string.h
src/words/: gw-node.h  gw-word.c  gw-word.h
tests/: Makefile.am  meson.build  stub-modifier.c  stub-modifier.h  test-dictionary.c  test-document.c  test-language.c  test-radix-tree.c  test-segmenters.c  test-string-comparator.c  test-string-editor.c  test-string.c
